--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "nexus. Group AI"
 description: "AI-Powered Insights for Better Decisions"
 baseurl: ""  # Leave empty for GitHub Pages root
-url: "https://yourusername.github.io/nexus-group-ai"  # Replace with your GitHub Pages URL
+url: "https://orion-f.github.io/nexus-website/"  # Replace with your GitHub Pages URL
